fix scrollbar on mobile

--- a/src/style/base/_base.sass
+++ b/src/style/base/_base.sass
@@ -1,9 +1,5 @@
 @import 'variables'
 
-body,
-html
-    overflow: hidden
-
 body
     color: $body-color
     font-family: 'MyBodyFont', sans-serif
