--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -145,4 +145,5 @@ footer nav
     bottom: 0
     &.nav-photo
         @media (max-width: 1024px) and (orientation: landscape)
-            right: 0
+            /* avoid scroll bar to appear */
+            right: 1px
